- Implemented: Energy Dashboard
- Implemented: Event Editor, storing/loading opened events
- Implemented: Hour chart for P1 log
- Implemented: OpenWeatherMap, API 3.0 support
- Implemented: Event Editor, Close/Close All menu dropdown
- Implemented: Possible to query a range of device states via JSON
- Implemented: P1 Meter, option to specify view (low/high tariff or simple (dynamic contract))
- Fixed: Floorplan, better detection of switches
- Fixed: Hardware Setup, hiding extra parameters when selecting a python plugin
- Fixed: PythonEx framework, two notifications where send for switch type devices
- Fixed: Python framework, custom image loading
- Removed: Cereal Proxy (not needed anymore)
- Changed: Custom Templates are not cached in browser
- Changed: EvoHome, now making use of general logging system
- Changed: MQTT-AD, now also handles brightness scale number values as string
- Changed: SBFSpot, disabled error 28 error
- Changed: Selector switch now displays correct state in Data field (and devices overview)

Version 2024.4 (January 30th 2024)
- Fixed: cWebm, fixing high CPU load caused by time jumps
- Fixed: Memory leak in master/client setup
- Fixed: Python, device creation with options was not working correctly
- Fixed: Room Selection, switching to default room did not always work
- Fixed: Temperature compare chart for Fahrenheit

Version 2024.3 (January 24th 2024)
- Implemented: Domoticz Remote Server, added better error message if remote Domoticz device could not be created because accepting new devices is disabled under settings
- Implemented: InfluxDB Data push, add error message when return status code is forbidden
- Fixed: Alert sensor notification
- Fixed: Scripts/Lua/Blockly, setting a setPoint

Version 2024.2 (January 15th 2024)
- Implemented: Compare chart for most sensor types
- Implemented: Email, Splitting mime attachments over multiple lines
- Implemented: Notifications, Option to enable/disable
- Implemented: OpenZwave is back.... (No Support)