@@ -17,11 +17,18 @@
 #define SE_AC_CURRENT 24
 #define SE_DATE 25
 
+#define SE_GRID 30
+#define SE_LOAD 31	
+#define SE_PV 32
+#define SE_STORAGE_STATUS 33
+#define SE_STORAGE_POWER 34
+#define SE_STORAGE_CHARGELEVEL 35
+#define SE_STORAGE_CRITITAL 36
+
+
 #ifdef _DEBUG
-	//#define DEBUG_SolarEdgeAPIR_SITE
-	//#define DEBUG_SolarEdgeAPIR_INVERTERS
-	//#define DEBUG_SolarEdgeAPIR_DETAILS
-	//#define DEBUG_SolarEdgeAPIW
+//	#define DEBUG_SolarEdgeAPIR
+//	#define DEBUG_SolarEdgeAPIW
 #endif
 
 #ifdef DEBUG_SolarEdgeAPIW
@@ -35,7 +42,7 @@ void SaveString2Disk(std::string str, std::string filename)
 	}
 }
 #endif
-#if defined(DEBUG_SolarEdgeAPIR_DETAILS) || defined(DEBUG_SolarEdgeAPIR_SITE) || defined(DEBUG_SolarEdgeAPIR_INVERTERS)
+#ifdef DEBUG_SolarEdgeAPIR
 std::string ReadFile(std::string filename)
 {
 	std::ifstream file;
@@ -107,6 +114,8 @@ void SolarEdgeAPI::Do_Work()
 			}
 			if (!m_inverters.empty())
 				GetMeterDetails();
+			if (m_bPollBattery)
+				GetBatteryDetails();
 		}
 	}
 	Log(LOG_STATUS, "Worker stopped...");
@@ -144,7 +153,7 @@ bool SolarEdgeAPI::GetSite()
 {
 	m_SiteID = 0;
 	std::string sResult;
-#ifdef DEBUG_SolarEdgeAPIR_SITE
+#ifdef DEBUG_SolarEdgeAPIR
 	sResult = ReadFile("E:\\SolarEdge_sites.json");
 #else
 
@@ -198,7 +207,7 @@ void SolarEdgeAPI::GetInverters()
 {
 	m_inverters.clear();
 	std::string sResult;
-#ifdef DEBUG_SolarEdgeAPIR_INVERTERS
+#ifdef DEBUG_SolarEdgeAPIR
 	sResult = ReadFile("E:\\SolarEdge_inverters.json");
 #else
 
@@ -274,7 +283,7 @@ void SolarEdgeAPI::GetInverterDetails(const _tInverterSettings* pInverterSetting
 {
 	std::string sResult;
 	char szTmp[200];
-#ifdef DEBUG_SolarEdgeAPIR_DETAILS
+#ifdef DEBUG_SolarEdgeAPIR
 	sResult = ReadFile("E:\\SolarEdge.json");
 #else
 	time_t atime = mytime(nullptr);
@@ -427,6 +436,88 @@ void SolarEdgeAPI::GetInverterDetails(const _tInverterSettings* pInverterSetting
 			}
 		}
 	}
+}
 
+void SolarEdgeAPI::GetBatteryDetails()
+{
+	std::string sResult;
+#ifdef DEBUG_SolarEdgeAPIR
+	sResult = ReadFile("E:\\SolarEdge_currentPowerFlow.json");
+#else
+
+	std::vector<std::string> ExtraHeaders;
+	ExtraHeaders.push_back("Accept: application/json");
+
+	std::stringstream sURL;
+	sURL << "https://monitoringapi.solaredge.com/site/" << m_SiteID << "/currentPowerFlow?api_key=" << m_APIKey;
+	if (!HTTPClient::GET(sURL.str(), ExtraHeaders, sResult))
+	{
+		Log(LOG_ERROR, "Error getting http data (currentPowerFlow details)!");
+		return;
+	}
+#ifdef DEBUG_SolarEdgeAPIW
+	SaveString2Disk(sResult, "E:\\SolarEdge_currentPowerFlow.json");
+#endif
+#endif
+	Json::Value root;
+
+	bool ret = ParseJSon(sResult, root);
+	if ((!ret) || (!root.isObject()))
+	{
+		Log(LOG_ERROR, "Invalid data received!");
+		return;
+	}
+	if (root["siteCurrentPowerFlow"].empty() == true)
+	{
+		m_bPollBattery = false;
+		//Log(LOG_ERROR, "Invalid data received, or invalid APIKey");
+		return;
+	}
+	root = root["siteCurrentPowerFlow"];
+
+	std::string status;
+	float power;
+
+	if (!root["GRID"].empty())
+	{
+		status = root["GRID"]["status"].asString();
+		if (status == "Active")
+		{
+			power = root["GRID"]["currentPower"].asFloat();
+			SendWattMeter(200, SE_GRID, 255, power * 1000, "Grid Power");
+		}
+	}
+	if (!root["LOAD"].empty())
+	{
+		status = root["LOAD"]["status"].asString();
+		if (status == "Active")
+		{
+			power = root["LOAD"]["currentPower"].asFloat();
+			SendWattMeter(200, SE_LOAD, 255, power * 1000, "Load Power");
+		}
+	}
+	if (!root["PV"].empty())
+	{
+		status = root["PV"]["status"].asString();
+		if (status == "Active")
+		{
+			power = root["PV"]["currentPower"].asFloat();
+			SendWattMeter(200, SE_PV, 255, power * 1000, "PV Power");
+		}
+	}
+	if (!root["STORAGE"].empty())
+	{
+		status = root["STORAGE"]["status"].asString();
+		SendTextSensor(200, SE_STORAGE_STATUS, 255, status, "Battery Status");
+
+		power = root["STORAGE"]["currentPower"].asFloat();
+		SendWattMeter(200, SE_STORAGE_POWER, 255, power * 1000, "Battery Power");
+
+		float chargeLevel = root["STORAGE"]["chargeLevel"].asFloat();
+		SendPercentageSensor(200, SE_STORAGE_CHARGELEVEL, 255, chargeLevel, "Battery Charge Level");
+
+		bool battertCritical = root["STORAGE"]["critical"].asFloat();
+		SendSwitch(200, SE_STORAGE_CRITITAL, 255, battertCritical, 0, "Battery Critical", "SolarEdge");
+	}
 }
 
